server: implement i18n MailSender service with some tests